# TorchLite

./: .gitignore  CMakeLists.txt  README.md  neuron.cpp  neuron.h
include/: layer.h  nn.h  ops.h  value.h
src/: layer.cpp  main.cpp  value.cpp
